Added codegen per method to admin panel for if you want to add a new method and spit out scaffolding code for it.

--- a/modules/admin/templates/admin/entpost.mustache
+++ b/modules/admin/templates/admin/entpost.mustache
@@ -46,6 +46,7 @@
 
 		{{/hasparams}}
 			<input type="submit"><br />
+            <a href="/codegen/genmethod?methods_id={{id}}" target="_blank">Generate Scaffolding Code for {{shortname}}</a>
 
 
         </li>
