I have commited the change,b/c the navi div occupied the main form

--- a/modules/admin/templates/admin/entpost.mustache
+++ b/modules/admin/templates/admin/entpost.mustache
@@ -1,5 +1,5 @@
 <a name="top"></a>
-<div id="nav">
+<div id="nav" style=" float:right;border:1px solid red;margin-left:950px;">
     {{#methods}}<ul>{{#method}}
         <li><a href="#method{{id}}"><h3>{{id}} - {{shortname}} ({{api_method}})</h3></a></li>
     {{/method}}</ul>{{/methods}}
