--- a/application/templates/index.mustache
+++ b/application/templates/index.mustache
@@ -16,7 +16,7 @@
     <script data-main="{{base_url}}main" src="{{base_url}}vendor/require.js"></script>
     <script>
         var base_url = '{{base_url}}';
-        var testpath = '{{base_url}}api';
+        var testpath = '{{base_url}}{{test}}';
         require(['facade', 'application', 'utils'], function (facade, App, utils) {
             var $ = facade.$,
                 Backbone = facade.Backbone,
