change sport_type, sport_name, picture, num_fans ref #497

--- a/html/packages/sportorg/templates/roster-item.html
+++ b/html/packages/sportorg/templates/roster-item.html
@@ -1,11 +1,11 @@
 
 {{#payload}}
-    <img src="{{picture}}" alt="{{name}}"/><br/>
+    <img src="{{user_picture}}" alt="{{name}}"/><br/>
     {{name}} '{{grad_year}}<br/>
-    {{sport_type}}<br/>
     {{sport_name}}<br/>
+    {{position}}<br/>
     {{team_name}}<br/>
     {{num_votes}} Votes<br/>
-    {{num_fans}} Fans<br/>
+    {{num_followers}} Followers<br/>
 {{/payload}}
 
