--- a/html/packages/sportorg/templates/teamroster-item.html
+++ b/html/packages/sportorg/templates/teamroster-item.html
@@ -2,10 +2,10 @@
 {{#payload}}
     <h3>{{team_name}}</h3>
     {{#rosters}}
-        <img src="{{picture}}" alt="{{name}}"/><br/>
+        <img src="{{user_picture}}" alt="{{name}}"/><br/>
         {{name}} '{{grad_year}}<br/>
-        {{sport_type}}<br/>
         {{sport_name}}<br/>
+        {{position}}<br/>
         {{team_name}}<br/>
     {{/rosters}}
     <br/><br/>
