--- a/html/packages/user/templates/related-item.html
+++ b/html/packages/user/templates/related-item.html
@@ -7,7 +7,7 @@
     <div class="span6">
         <div class="username">{{user_name}}</div>
         <div class="votes">Votes: {{num_votes}}</div>
-        <div class="fans">Fans: {{num_fans}}</div>
+        <div class="fans">Followers: {{num_followers}}</div>
     </div>
 </div>
 <table class="table">
