--- a/html/pages/registration/templates/register_facebook.html
+++ b/html/pages/registration/templates/register_facebook.html
@@ -3,7 +3,7 @@
 <h1>Register with Facebook</h1>
 <div class="row-fluid">
     <div class="span4">
-        <img class="picture" src="{{profile_picture}}" alt="{{name}}"/><br/>
+        <img class="picture" src="{{user_picture}}" alt="{{name}}"/><br/>
         <a href="#" class="diff_fb_pic">Different Facebook Pic</a><br/>
         <a href="#" class="upload_new_image">Upload a New Image</a><br/>
     </div>
