fixed #392 /api/user/register
Please read a comment on #392.

--- a/html/pages/registration/templates/register_email.html
+++ b/html/pages/registration/templates/register_email.html
@@ -46,9 +46,9 @@
             </div>
         </div>
         <div class="control-group">
-            <label class="control-label" for="re-password">Again: </label>
+            <label class="control-label" for="re_password">Again: </label>
             <div class="controls">
-                <input type="password" id="re-password" name="re-password"/>                
+                <input type="password" id="re_password" name="re_password"/>                
             </div>
         </div>
         <div>
