Put in code to check for 'model' which will hold json, and if it's there it will load that into whatever the variable for the current requests http method.  If we use this for get requests it will require that we move from using the query request method to the get method in the base controller

--- a/application/templates/docs.mustache
+++ b/application/templates/docs.mustache
@@ -13,7 +13,7 @@
 	<link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-ipad.png" />
 	<link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-iphone4.png" />
 	<link rel="stylesheet" href="/css/normalize.css">
-	<script src="/vendor/jquery-1.9.0.min.js"></script>
+	<script src="/vendor/jquery-2.0.0.js"></script>
 
 	<script>
 
