--- a/html/pages/registration/templates/select_org.html
+++ b/html/pages/registration/templates/select_org.html
@@ -5,11 +5,13 @@
     <h3>Find My Club</h3>
     <p>Use our club locator to find your sports club and link up with your team.</p>
 </a>
+{{#display_highschool}}
 <div class="text-error">Only display high school chooser if age <= 18</div>
 <a href="#" class="high_school">
     <h3>High School Locator</h3>
     <p>If you play for your high school, click here to find your school and link up with your team.</p>
 </a>
+{{/display_highschool}}
 <a href="#" class="indiv_sports">
     <h3>Individual Sports</h3>
     <p>If you are an athlete who competes without a team, this is where you'll find your sport.</p>
