change gender codes, b/c the data type in table was changed

--- a/html/pages/registration/templates/register_email.html
+++ b/html/pages/registration/templates/register_email.html
@@ -40,8 +40,8 @@
         <div class="control-group">
             <label class="control-label">Gender: </label>
             <div class="controls" id="gender">
-                <label for="male"><input type="radio" id="male" name="gender" value="1"> Male</label>
-                <label for="female"><input type="radio" id="female" name="gender" value="0"> Female</label>
+                <label for="male"><input type="radio" id="male" name="gender" value="M"> Male</label>
+                <label for="female"><input type="radio" id="female" name="gender" value="F"> Female</label>
                 <p class="field-error"></p>
                 <p class="field-message"></p>
             </div>
