--- a/html/pages/registration/templates/find_my_club.html
+++ b/html/pages/registration/templates/find_my_club.html
@@ -1,12 +1,12 @@
 
 <h2>Find My Sports Club</h2>
 <form id="findClubFrm">
-    <label for="what_sport">What State?</label>
-    <input id="what_sport" name="what_sport" placeholder="Just Start Typing" value="{{state}}" />
-    <label for="what_sport">What Sport?</label>
-    <input id="what_sport" name="what_sport" placeholder="Just Start Typing" value="{{sport_name}}" />
-    <label for="club_name">Club Name</label>
-    <input id="club_name" name="club_name" placeholder="Just Start Typing" value="{{club_name}}" />
+    <label for="state">What State?</label>
+    <input id="state" name="what_sport" placeholder="Just Start Typing" value="{{state}}" />
+    <label for="sport">What Sport?</label>
+    <input id="sport" name="what_sport" placeholder="Just Start Typing" value="{{sport}}" />
+    <label for="club">Club Name</label>
+    <input id="club" name="club" placeholder="Just Start Typing" value="{{club}}" />
     <div class="complevels"></div>
     <div class="seasons"></div>
     <a href="#" class="back">Go Back</a>    
