--- a/html/pages/registration/templates/select_org.html
+++ b/html/pages/registration/templates/select_org.html
@@ -1,19 +1,27 @@
 
 <h1>Athletic Organizations</h1>
+<div class="step-club">
 <div>Link Up With Your Teams</div>
 <a href="#" class="find_club">
     <h3>Find My Club</h3>
     <p>Use our club locator to find your sports club and link up with your team.</p>
 </a>
-{{#display_highschool}}
+</div>
+{{#show_highschool}}
+<div class="step-highschool" style="display:none;">
 <div class="text-error">Only display high school chooser if age <= 18</div>
 <a href="#" class="high_school">
     <h3>High School Locator</h3>
     <p>If you play for your high school, click here to find your school and link up with your team.</p>
 </a>
-{{/display_highschool}}
+</div>
+{{/show_highschool}}
+<div class="step-sport" style="display:none;">
 <a href="#" class="indiv_sports">
     <h3>Individual Sports</h3>
     <p>If you are an athlete who competes without a team, this is where you'll find your sport.</p>
 </a>
+</div>
+<div class="step-next" style="display:none;">
 <a href="#" class="next">What's Next</a>
+</div>
