--- a/application/templates/index.mustache
+++ b/application/templates/index.mustache
@@ -17,6 +17,7 @@
     <script>
         var base_url = '{{base_url}}';
         var testpath = '{{base_url}}{{testpath}}';
+        var testpath = false;
         require(['facade', 'application', 'utils'], function (facade, App, utils) {
             var $ = facade.$,
                 Backbone = facade.Backbone,
