--- a/html/pages/registration/templates/find_my_club.html
+++ b/html/pages/registration/templates/find_my_club.html
@@ -1,12 +1,30 @@
 
 <h2>Find My Sports Club</h2>
-<form id="findClubFrm">
-    <label for="state">What State?</label>
-    <input id="state" name="what_sport" placeholder="Just Start Typing" value="{{state}}" />
-    <label for="sport">What Sport?</label>
-    <input id="sport" name="what_sport" placeholder="Just Start Typing" value="{{sport}}" />
-    <label for="club">Club Name</label>
-    <input id="club" name="club" placeholder="Just Start Typing" value="{{club}}" />
+<form id="findClubFrm" class="form-horizontal">
+    <div class="control-group">
+        <label class="control-label" for="states_id">What State?</label>
+        <div class="controls">
+            <input id="states_id" name="state_name" placeholder="Just Start Typing" value="{{state}}" />
+            <p class="field-error"></p>
+            <p class="field-message"></p>
+        </div>
+    </div>
+    <div class="control-group">
+        <label class="control-label" for="sports_id">What Sport?</label>
+        <div class="controls">
+            <input id="sports_id" name="sport_name" placeholder="Just Start Typing" value="{{sport}}" />
+            <p class="field-error"></p>
+            <p class="field-message"></p>
+        </div>
+    </div>
+    <div class="control-group">
+        <label class="control-label" for="orgs_id">Club Name</label>
+        <div class="controls">
+            <input id="orgs_id" name="org_name" placeholder="Just Start Typing" value="{{club}}" />
+            <p class="field-error"></p>
+            <p class="field-message"></p>
+        </div>
+    </div>
     <div class="complevels"></div>
     <div class="seasons"></div>
     <a href="#" class="back">Go Back</a>    
