--- a/html/packages/media/templates/video-player.html
+++ b/html/packages/media/templates/video-player.html
@@ -6,7 +6,13 @@
         {{team1_name}} vs {{team2_name}}
     {{/games}}    
     Votes: {{num_votes}}, Views: {{num_views}}, Comments: {{num_comments}}<br/>
-    
+    <br>
+
+		{{#video_type}}
+				{{video_type_name}}
+				{{meta_details.url}}
+				<br>
+		{{/video_type}}
     <div class="social-links">
     {{#social_links}}
         <a class="{{class}}" href="{{link}}" title="{{title}}">{{title}}</a>
